@@ -697,4 +697,5 @@ table.insert(tests, "log_--to")
 table.insert(tests, "mkdir")
 table.insert(tests, "fail_cleanly_when__MTN_format_corrupt")
 table.insert(tests, "add_ignores__MTN")
+table.insert(tests, "missing_empty_dir")
 
